--- a/.github/workflows/push-docker-container.yml
+++ b/.github/workflows/push-docker-container.yml
@@ -76,7 +76,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           build-args: |
             UBUNTU_VERSION=${{matrix.ubuntu-version}}
