Verify php & node version, add readme

--- a/.github/workflows/push-docker-container.yml
+++ b/.github/workflows/push-docker-container.yml
@@ -19,24 +19,18 @@ jobs:
         fail-fast: true
         matrix:
           include:
-            # - ubuntu-version: 20.04
-            #   php-version: 8.1
-            #   node-version: 12
-            # - ubuntu-version: 20.04
-            #   php-version: 8.1
-            #   node-version: 20
+            - ubuntu-version: 20.04
+              php-version: 8.1
+              node-version: 12
             - ubuntu-version: 20.04
               php-version: 8.2
               node-version: 12
-            # - ubuntu-version: 20.04
-            #   php-version: 8.2
-            #   node-version: 20
-            # - ubuntu-version: 20.04
-            #   php-version: 8.3
-            #   node-version: 12
-            # - ubuntu-version: 20.04
-            #   php-version: 8.3
-            #   node-version: 20
+            - ubuntu-version: 22.04
+              php-version: 8.2
+              node-version: 12
+            - ubuntu-version: 22.04
+              php-version: 8.3
+              node-version: 12
   
     steps:
       -
