--- a/.github/workflows/push-docker-container.yml
+++ b/.github/workflows/push-docker-container.yml
@@ -31,7 +31,13 @@ jobs:
             - ubuntu-version: 22.04
               php-version: 8.3
               node-version: 14
-  
+            - ubuntu-version: 22.04
+              php-version: 8.2
+              node-version: 22
+            - ubuntu-version: 22.04
+              php-version: 8.3
+              node-version: 22
+
     steps:
       -
         name: Checkout
